--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 </head>
 <body>
     <header>
+        <!--Navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
+                <!--logo-->
                 <a class="navbar-brand" href="#">
                     <img src="./img/duck.png" alt="duck_logo" width="75" height="75">          </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <!--navbar-links-->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -35,6 +38,7 @@
                             <a class="nav-link" href="#">Help</a>
                         </li>
                     </ul>
+                    <!--search-->
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Cerca" aria-label="Search"/>
                         <button class="btn btn-outline-dark bg-light" type="submit">Cerca</button>
@@ -43,6 +47,132 @@
             </div>   
          </nav>
     </header>
-    
+    <main>
+        <!--table-->
+        <div class="container my-3">
+            <table class="table table-striped-">
+                <thead>
+                    <tr>
+                        <th scope="col"><h2>Catalogo Libri</h2></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"><button class="btn bg-primary text-light">Aggiungi Libro</button></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Titolo</th>
+                        <th>Data prestito</th>
+                        <th>Stato</th>
+                        <th>Azioni</th>
+                    </tr>
+                    <tr>
+                        <td>I pilastri della terra</td>
+                        <td><data value="-"></data></td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i class="fa fa-pencil text-secondary"></i></a></button> <button type="button" class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><data value=""></data></td>
+                        <td><span class="badge"></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
