--- a/index.html
+++ b/index.html
@@ -68,21 +68,66 @@
                     </tr>
                     <tr>
                         <td>I pilastri della terra</td>
-                        <td><data value="-"></data></td>
+                        <td>-</td>
                         <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i class="fa fa-pencil text-secondary"></i></a></button> <button type="button" class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button></td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
+                        <td>I promessi sposi</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
                                         class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
                                 class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button></td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
+                        <td>Il Signore degli Anelli</td>
+                        <td>18/10/2023</time></td>
+                        <td><span class="badge bg-warning text-light">In prestito</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Harry Potter e la pietra filosofale</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Il codice Da Vinci</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Shining</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-danger">Non disponibile</span></span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>La divina commedia</td>
+                        <td>21/09/2023</td>
+                        <td><span class="badge bg-warning text-light">In prestito</span></td>
+                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
+                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
+                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Il trono di spade</td>
+                        <td>-</td>
                         <td><span class="badge"></span></td>
                         <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
                                         class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
@@ -90,81 +135,36 @@
                         </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
+                        <td>Il mondo di Sofia</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-danger">Non disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
                                         class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
                                 class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
                         </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
+                        <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                        <td>25/07/2023</td>
+                        <td><span class="badge bg-warning text-light">In prestito</span></td>
                         <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
                                         class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
                                 class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
                         </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
+                        <td>Il piccolo principe</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
                                         class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
                                 class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
                         </td>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
-                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
-                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
-                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
-                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
-                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
-                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
-                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
-                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
-                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
-                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
-                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
-                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
-                        <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
-                                        class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
-                                class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><data value=""></data></td>
-                        <td><span class="badge"></span></td>
+                        <td>La storia infinita</td>
+                        <td>-</td>
+                        <td><span class="badge text-bg-success">Disponibile</span></td>
                         <td><button type="button" class="btn btn-outline-secondary"><a href="#"><i
                                         class="fa fa-pencil text-secondary"></i></a></button> <button type="button"
                                 class="btn btn-outline-secondary"><a href="#"><i><i class="fa fa-trash text-secondary"></i></i></a></button>
