--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <!--logo-->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="">
                     <img src="./img/duck.png" alt="duck_logo" width="75" height="75">          </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,21 +52,17 @@
         <div class="container my-3">
             <div class="row">
                 <div class="col-lg-9 col-md-12">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h2>Catalogo Libri</h2>
+                        <button class="btn bg-primary"> <a href="./bonus/bonus.html" class="text-light text-decoration-none"> Aggiungi Libro </a> </button>
+                    </div>
                     <table class="table table-striped-">
                         <thead>
                             <tr>
-                                <th scope="col"><h2>Catalogo Libri</h2></th>
-                                <th scope="col"></th>
-                                <th scope="col"></th>
-                                <th scope="col"><button class="btn bg-primary text-light">Aggiungi Libro</button></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th>Titolo</th>
-                                <th class="d-sm-none d-md-table-cell">Data prestito</th>
-                                <th>Stato</th>
-                                <th>Azioni</th>
+                                <th scope="col">Titolo</th>
+                                <th scope="col" class="d-sm-none d-md-table-cell">Data prestito</th>
+                                <th scope="col">Stato</th>
+                                <th scope="col">Azioni</th>
                             </tr>
                             <tr class="table-secondary">
                                 <td>I pilastri della terra</td>
@@ -281,4 +277,7 @@
         </div>
     </main>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+    crossorigin="anonymous"></script>
 </html>
